--- a/Articles/src/BuildingBlocks/BuildingBlocks.Core/BuildingBlocks.Core.csproj
+++ b/Articles/src/BuildingBlocks/BuildingBlocks.Core/BuildingBlocks.Core.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="FluentValidation" Version="12.1.1"/>
+        <PackageReference Include="Mapster" Version="7.4.0" />
         <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="10.0.1"/>
         <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="10.0.1"/>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.1"/>
